Fix event graph overflowing

--- a/src/styles/pages/sites/[site_id]/events/_history.scss
+++ b/src/styles/pages/sites/[site_id]/events/_history.scss
@@ -93,8 +93,8 @@
   }
 
   .event-counts {
-    height: 30rem;
     margin: 2rem 0;
+    min-height: 30rem;
 
     .heading {
       display: flex;
